Create profile page.

--- a/public/index.html
+++ b/public/index.html
@@ -60,5 +60,6 @@
     ></script>
     <script src="./js/javascript.js"></script>
     <script src="./js/wow.min.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBQ56ZZfTL3fSimAYL3i9Ry6TptGHyV1iY&libraries=places"></script>
   </body>
 </html>
